public/stylesheets/main.css
/* General Styles
-------------------------------------------------- */

.inline-form {
    display: inline;
}

#activity-grid {
	min-height: 500px;
}

.activity-card {
	background-color: #f9f9f9;
	cursor: pointer;
}

/* Used to remove borders on activty show and index pages */
.nopadding {
   padding: 0 !important;
}

/* Remove the up and down arrows used to step number inputs, I'll make my own from buttons */
input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Style for Sociable Loves*/
.heart-offset { 
	margin-top: 0.05em; 
}

.sociable-love {
	color: red;
}

#sociableLove:hover {
	color: #C62638;
	cursor: pointer;
}

.sociable-comment {
	color: #249D3D;
	cursor: pointer;
}

.activity-show-image {
	max-height: 70vh;
}

.activity-index-image {
  max-height: 40vh;
}

#showPageLoveAndComment {
  font-size: 1.2em; /* 20px; */
}

/* Activity Status ToolTip
-------------------------------------------------- */

.tooltip-status-text {
    visibility: hidden;
    width: 200px;
    background-color: #4c4c4c;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px;
    position: absolute;
    z-index: 1;
    /*bottom: 140px;*/
    /*right: 100px;*/
    margin-left: 5px;
    font-weight: 200;
    font-size: 20px;
}

.tooltip-status:hover .tooltip-status-text {
    visibility: visible;
}

/* Google Maps Styles
-------------------------------------------------- */
#activity-show-map {
	/*height: 100%;*/
    min-height: 200px;
    width: 100%;
}

#activity-index-map {
    height: 70vh;
    width: 100%;
    margin: 0;
    padding: 0;
}

.mapKeyDiv {
  cursor: pointer;
  transition: all .2s ease;
}

/*INFOWINDOW STYLES*/
#activity-index-map img {
	max-width: none !important;
}
.gm-style-iw {
	width: 250px !important;
	top: 15px !important;
	left: 0px !important;
	background-color: #fff;
	box-shadow: 0 1px 6px rgba(178, 178, 178, 0.6);
	border: 1px solid rgba(72, 181, 233, 0.6);
	border-radius: 10px 10px 10px 10px;
}
#iw-container {
	margin-bottom: 10px;
	width: 250px !important;
}
#iw-container .iw-title {
	font-family: 'Open Sans Condensed', sans-serif;
	font-size: 18px;
	font-weight: 200;
	padding: 10px;
	background-color: #157EFB; /* Title background color */
	color: white;
	margin: 0;
	border-radius: 2px 2px 0 0;
}
#iw-container .iw-content {
	font-size: 13px;
	line-height: 18px;
	font-weight: 400;
	margin-right: 1px;
	padding: 10px 5px 20px 15px;
	max-height: 280px !important; /* Set height of the infowindow div */
	min-height: 200px !important;
	overflow-y: auto;
	overflow-x: hidden;
	width: 240px !important; /* set width to slightly less than the container so it looks better */
}

.iw-subTitle {
	font-size: 16px;
	font-weight: 700;
	padding: 5px 0;
}
.iw-bottom-gradient {
	position: absolute;
	width: 344px;
	height: 25px;
	bottom: 10px;
	right: 0px;
	background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
	background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
	background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
	background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
}



/* CUSTOM CHECKBOXES AND FILTER SECTION
-------------------------------------------------- */

.checkbox-container {
    display: block;
    position: relative;
    padding-left: 35px;
    margin-bottom: 5px;
    cursor: pointer;
    font-size: 1.1em;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

/* Hide the browser's default checkbox */
.checkbox-container input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
}

/* Create a custom checkbox */
.checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 25px;
    width: 25px;
    background-color: #eee;
}

/* On mouse-over, add a grey background color */
.checkbox-container:hover input ~ .checkmark {
    background-color: #7bbbed;
}

/* When the checkbox is checked, add a blue background */
.checkbox-container input:checked ~ .checkmark {
    background-color: #2196F3;
}

/* On mouse-over when checked, add a grey background color */
.checkbox-container:hover input:checked ~ .checkmark {
    background-color: #7bbbed;
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
    content: "";
    position: absolute;
    display: none;
}

/* Show the checkmark when checked */
.checkbox-container input:checked ~ .checkmark:after {
    display: block;
}

/* Style the checkmark/indicator */
.checkbox-container .checkmark:after {
    left: 9px;
    top: 5px;
    width: 7px;
    height: 12px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}


/*Set large radius on clear filter buttons*/
.clear-filter-btn {
  border-radius: 40px;
  height: 20px;
  line-height: 10px;
}




/* Signin Form
-------------------------------------------------- */

.form-signin {
  width: 100%;
  max-width: 330px;
  padding: 15px;
  margin: auto;
}
.form-signin .form-control {
  position: relative;
  box-sizing: border-box;
  height: auto;
  padding: 10px;
  font-size: 16px;
}
.form-signin .form-control:focus { /* Which ever input is in focus will be on top, so the highlight border works correctly */
  z-index: 2;
}
.form-signin input[type="email"] {
  margin-bottom: -1px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}
.form-signin input[type="password"] {
  margin-bottom: 10px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}


/* Floating Header Styles
-------------------------------------------------- */
body {
  /* padding-top for floating navbar */
  padding-top: 80px;
}

.navbar-background-color {
  background-color: #1166c6;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}

body {
  /* Margin bottom by footer height */
  margin-bottom: 60px;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 60px; /* Set the fixed height of the footer here */
  line-height: 60px; /* Vertically center the text there */
  background-color: #f5f5f5;
}
.container .text-muted {
  margin: 20px 0;
}

